k8s/service-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: queueforge-worker-headless
  namespace: queueforge
  labels:
    app: queueforge-worker
spec:
  clusterIP: None
  ports:
  - port: 3000
    name: dummy
  selector:
    app: queueforge-worker
